--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
     "antd": "^5.11.2",
+    "axios": "^1.6.2",
     "next": "14.0.3",
     "next-auth": "^4.24.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-pdf": "^7.5.1"
+  },
+  "devDependencies": {
+    "raw-loader": "^4.0.2"
   }
 }
